--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-D7TI7F4\\SQLEXPRESS;Database=EmployeeDB;Trusted_Connection=True;"
+  "DefaultConnection": "Server=ServerName;Database=DBName;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
